# memos

./: .gitignore  README.md  app.py  ongoingbugs.md  pyproject.toml
_1_structured_output_4o/: structured_output_4o.md
_1_structured_output_4o/so_models/: GraphOfThought.py
_2_structured_output_4o_with_examples/: structured_output_4o_with_examples.md  structured_output_4o_with_examples.py
_2_structured_output_4o_with_examples/so_models/: GraphOfThought.py
memos/: README.md
memos/_10_memos_module/: memos_module.md  memos_module.py
memos/_111_synthetic_evals/: synthetic_evals.py
memos/_1_structured_output_4o/: structured_output_4o.md  structured_output_4o.py
memos/_2_structured_output_4o_with_examples/: structured_output_4o_with_examples.md  structured_output_4o_with_examples.py
memos/_3_pure_function_so4o/: pure_function_so4o.md  pure_function_so4o.py
memos/_4_pure_function_with_tests_so4o/: pure_function_with_tests_so4o.md  pure_function_with_tests_so4o.py
memos/_5_html_so4o/: html_so4o.md  html_so4o.py
memos/_6_pure_function_with_tests_and_imports_so4o/: pure_function_with_tests_and_imports_so4o.md  pure_function_with_tests_and_imports_so4o.py
playground/_DO_life_ltm_graph/: life_ltm.md  (+2 more)
structured_output_4o/: structured_output_4o.md  structured_output_4o.py
templates/: html-so4o.html  index.html  knowledge-graph-4o.html  knowledge-graph-sonnet.html  knowledge-graph.html  pure-function-so4o.html  pure-function-with-tests-and-imports-so4o.html  pure-function-with-tests-so4o.html  structured-output-4o-with-examples.html  structured-output-4o.html
(+43 files in other folders)
