[tool.poetry]
name = "memos"
version = "0.1.0"
description = "Your memory operating system"
authors = ["Belinda Mo"]
readme = "README.md"
packages = [
    { include = "memos" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
Flask = "^3.1.0"
pydantic = "^2.10.1"
openai = "^1.55.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
