[tool.poetry]
name = "memos"
version = "0.1.0"
description = "Your memory operating system"
authors = ["Belinda Mo"]
readme = "README.md"
packages = [
    { include = "memos" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Flask = "^3.1.0"
pydantic = "^2.10.1"
openai = "^1.55.1"
bs4 = "^0.0.2"
cssutils = "^2.11.1"
anthropic = "^0.40.0"
networkx = "^3.4.2"
pyvis = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
